--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -33,6 +33,7 @@
     <property name="title">
      <string>Settings</string>
     </property>
+    <addaction name="actionNetwork"/>
     <addaction name="actionPreferences"/>
     <addaction name="separator"/>
     <addaction name="actionAbout"/>
@@ -62,6 +63,11 @@
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="actionNetwork">
+   <property name="text">
+    <string>Network</string>
    </property>
   </action>
  </widget>
